# user-api

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 5b3f1b603960_initial_migration_with_user_table.py
src/user_api/: main.py
src/user_api/config/: settings.py
src/user_api/controllers/: user.py
src/user_api/models/: user.py
src/user_api/schemas/: user.py
tests/: conftest.py  test_user.py  test_user_api.py
